--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<div id="display"></div>
+
 <script src="js/plotly-latest.min.js"></script>
 <script src="js/script.js"></script>
 </body>
