--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div id="display"></div>
 
 <script src="js/plotly-latest.min.js"></script>
+<script src="js/vue.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
