--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Datavizbiz</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
 
 <div id="display"></div>
 
-<script src="js/plotly-latest.min.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/script.js"></script>
 </body>
