--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<title>Datavizbiz</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
 
-<div id="display"></div>
+<div class="container-fluid">
+	<div class="row">
+			<div class="col-lg-offset-2 col-xs-12">
+				<div id="display">
+				</div>
+		</div>
+	</div>
+</div>
 
 <script src="js/vue.js"></script>
 <script src="js/script.js"></script>
