--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-			<div class="col-lg-offset-2 col-xs-12">
+			<div class="col-lg-offset-2 col-xs-12 first-graph-div">
 				<div id="display">
 				</div>
 		</div>
