--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,6 @@
 </div>
 
 <script src="js/vue.js"></script>
-<script src="js/script.js"></script>
+<script src="js/anime-chart.js"></script>
 </body>
 </html>
