Added jumbotrons and made a SASS function that colors each jumbotron differently.

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div class="jumbotron jumbotron-1">
+	<div class="container">
+		<h1 id="anime-title">Anime</h1>
+	</div>
+</div>
+
 <div class="container-fluid">
 	<div class="row">
 			<div class="col-lg-offset-2 col-xs-12 first-graph-div">
@@ -15,7 +21,16 @@
 				</div>
 		</div>
 	</div>
+
 </div>
+
+<div class="jumbotron jumbotron-2">
+	<div class="container">
+		<h1 id="gintama-title">Gintama</h1>
+	</div>
+</div>
+
+
 
 <script src="js/vue.js"></script>
 <script src="js/anime-chart.js"></script>
