Read text file and stored into array

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,6 @@
 				</div>
 		</div>
 	</div>
-
 </div>
 
 <div class="jumbotron jumbotron-2">
@@ -30,9 +29,15 @@
 	</div>
 </div>
 
+<div class="container-fluid">
+	<div class="row">
+
+	</div>
+</div>
 
 
-<script src="js/vue.js"></script>
+
 <script src="js/anime-chart.js"></script>
+<script src="js/gintama.js"></script>
 </body>
 </html>
