--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,21 @@
 
 <div class="container-fluid">
 	<div class="row">
-
+		<div class="col-xs-12 col-md-offset-2 col-md-8" id="gintama-div">
+			<h3 id="gintama-list-title">
+				Top <input type="text" v-model="count" id="count-input"> Longest Episode Titles
+			</h3>
+			<ol id="long-ep-list">
+				<li v-for="title in setCount(titles, count)" track-by="$index">
+					<span class="poop">💩</span> <strong>{{title.length}}</strong> {{ title.text }}
+				</li>
+			</ol>
+		</div>
 	</div>
 </div>
 
-
-
 <script src="js/anime-chart.js"></script>
+<script src="js/vue.js"></script>
 <script src="js/gintama.js"></script>
 </body>
 </html>
