Finished Space jumbotron. Working on space now.

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,12 @@
 	</div>
 </div>
 
+<div class="jumbotron jumbotron-3">
+	<div class="container">
+		<h1 id="space-title">Space</h1>
+	</div>
+</div>
+
 <script src="js/anime-chart.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/gintama.js"></script>
