--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,16 @@
 
 <div class="jumbotron jumbotron-3">
 	<div class="container">
-		<h1 id="space-title">Space</h1>
+		<h1 id="space-title">Meteorite Landings</h1>
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-offset-2 col-xs-12 second-graph-div">
+			<div id="meteorite-display">
+			</div>
+	</div>
 	</div>
 </div>
 
