--- a/app/index.html
+++ b/app/index.html
@@ -54,15 +54,15 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-lg-offset-2 col-xs-12 second-graph-div">
-			<div id="meteorite-display">
+		<div class="col-xs-10 second-graph-div">
+			<div id="something-display">
 			</div>
-	</div>
 	</div>
 </div>
 
 <script src="js/anime-chart.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/gintama.js"></script>
+<script src="js/somefile.js"></script>
 </body>
 </html>
