In the proess of adding links.

--- a/app/index.html
+++ b/app/index.html
@@ -48,21 +48,35 @@
 
 <div class="jumbotron jumbotron-3">
 	<div class="container">
-		<h1 id="space-title">Meteorite Landings</h1>
+		<h1 id="thanks-title">Is That It?</h1>
 	</div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid last">
 	<div class="row">
-		<div class="col-xs-10 second-graph-div">
-			<div id="something-display">
-			</div>
+		<div class="col-xs-12 goodbye">
+			<p class="goodbye-text text-center">Yes.</p>
+		</div>
 	</div>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<ul>
+				<li><a>Github</a></li>
+				<li><a>Codepen</a></li>
+				<li><a>Tumblr</a></li>
+				<li><a>Medium</a></li>
+				<li><a>Goodreads</a></li>
+				<li><a>Happiness</a></li>
+			</ul>
+		</div>
+	</div>
+
 </div>
 
 <script src="js/anime-chart.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/gintama.js"></script>
-<script src="js/somefile.js"></script>
+<script src="js/map-chart.js"></script>
 </body>
 </html>
