--- a/app/index.html
+++ b/app/index.html
@@ -49,29 +49,23 @@
 <div class="jumbotron jumbotron-3">
 	<div class="container">
 		<h1 id="thanks-title">Is That It?</h1>
+		<p class="goodbye-text">(Yes)</p>
 	</div>
 </div>
 
 <div class="container-fluid last">
 	<div class="row">
-		<div class="col-xs-12 goodbye">
-			<p class="goodbye-text text-center">Yes.</p>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-xs-12">
-			<ul>
-				<li><a>Github</a></li>
-				<li><a>Codepen</a></li>
-				<li><a>Tumblr</a></li>
-				<li><a>Medium</a></li>
-				<li><a>Goodreads</a></li>
-				<li><a>Happiness</a></li>
+		<div class="col-xs-12 col-md-offset-5 col-md-1">
+			<ul class="credit-list">
+				<li><a href="http://github.com/onecodeman">Github</a></li>
+				<li><a href="http://codepen.io/davegumba">Codepen</a></li>
+				<li><a href="http://davecodes.tumblr.com">Tumblr</a></li>
+				<li><a href="https://medium.com/@davegumba">Medium</a></li>
+				<li><a href="https://www.goodreads.com/user/show/61955866-dave-gumba">Goodreads</a></li>
+				<li><a href="http://www.crunchyroll.com/gintama">Happiness</a></li>
 			</ul>
 		</div>
 	</div>
-
 </div>
 
 <script src="js/anime-chart.js"></script>
